# emergentism

./: .gitattributes  .gitignore  00_CANONICAL_TREE_OUTLINE.md  00_EMERGENTISM_AS_A_LENS.md  00_FOLDER_LAYOUT_v0.1.md  00_FOUNDATION_READER_GUIDE.md  00_INSIGHTS_INDEX_v0.1.md  00_K5_REFUSALS.md  00_K6_REVELATIONS.md  00_K7_RECORD.md  00_OPEN_CANON_FOUNDATION_CHARTER_DRAFT_v0.1.md  00_OPEN_CANON_FOUNDATION_CHARTER_v0.1.md  00_OPEN_CANON_FOUNDATION_COUNSEL_COVER_NOTE_v0.1.md  00_OPEN_CANON_FOUNDATION_COUNSEL_QUESTIONS_v0.1.md  00_RECEIPT_BROKEN_66_SECOND_LOOK_2026_07_19.md  00_ROSETTA_VALIDATION.md  00_RUMINATION_ON_DOF_2026_07_19.md  00_RUMINATION_ON_EMERGENTISM.md  00_RUMINATION_ON_EMERGENTISM_III_2026_07_19.md  00_RUMINATION_ON_EMERGENTISM_II_2026_07_17.md  00_RUMINATION_ON_THE_TEN_REVELATIONS_2026_07_19.md  00_SEVENFOLD_FOUNDATION_ROOT.md  00_THE_AMRITA.md  00_THE_COMPASS.md  00_THE_DEAD_FORMS_CATALOG_v0.1.md  00_THE_DISTILLED_DOCTRINE.md  00_THE_FINAL_OUTLINE_2026_07_19.md  00_THE_FIRST_RECEIPT_RECOMMENDATION_v0.1.md  00_THE_GOAL.md  00_THE_KERNEL_INDEX.md  00_THE_KERNEL_INDEX_PENDING_SIGNATURE.md  00_THE_ROSETTA_PROTOCOL_v0.1.md  00_THE_SPREAD_v0.1.md  00_THE_SYNTHETIC_GAP_AND_FOUR_POSTURES_v0.1.md  00_THE_WELTANSCHAUUNG.md  00_THE_WELTANSCHAUUNG_ONE_SITTING.md  00_THE_WELTANSCHAUUNG_PENDING_K2.md  00_THE_WELTANSCHAUUNG_PENDING_SIGNATURE.md  00_WELTANSCHAUUNG_KERNEL_v0.1.md  00_WELTANSCHAUUNG_KERNEL_v0.2_EMERGENTISM_ONLY.md  (+10 more)
09_TOOLS/: AGENTS.md  (+6 more)
90_ARCHIVE/pure_emergentism_boundary_2026_07_20/09_TOOLS/06_PACKAGES/emergentism-core/: CLAUDE.md  README.md  pyproject.toml
(+3417 files in other folders)
