[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emergentism-core"
version = "0.1.0"
description = "Shared primitives for the Emergentism organism — K2 crypto, framework types, council protocol invariants."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
]
authors = [
    {name = "Emergentism.org"},
]
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/emergentism_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
